Updated movie recommender system version 1

--- a/movie_recommender.ipynb
+++ b/movie_recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "ece42622-e51a-42d9-a128-332a870f658a",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "86655371-d0b8-4377-83b1-ec0fc7fdc757",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "[10 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,23 +451,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "be86dd7a-7a36-4a73-8b6d-81f3c11e143f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 75% vote number quantile is 34.0\n",
-      "The median rating of movies with more than 75% quantile of votes is 6.4\n",
-      "The mean rating of average_df is 6.314421675383692\n",
-      "The mean count of votes is 406.6622652833748\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we only consider movies with more than 75% quantile of the votes  \n",
     "v_counts = d_frame[d_frame['vote_count'].notnull()]['vote_count'].astype('int')\n",
@@ -494,14 +483,11 @@
     "\n",
     "# compute the median score of movies_v75q\n",
     "median_rating = base_df['vote_average'].median()\n",
-    "print(f\"The median rating of movies with more than 75% quantile of votes is {median_rating}\")\n",
     "\n",
     "# Use Bayesian average to compute a combined measure for average user rating + popularity \n",
     "overall_average_rating = base_df['vote_average'].mean()\n",
-    "print(f\"The mean rating of average_df is {overall_average_rating}\")\n",
     "\n",
     "average_counts = base_df['vote_count'].mean()\n",
-    "print(f\"The mean count of votes is {average_counts}\")\n",
     "\n",
     "global_c = average_counts * overall_average_rating\n",
     "\n",
@@ -518,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "719535d5-b219-4153-b220-1fea44a17ef0",
    "metadata": {
     "tags": []
@@ -528,7 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "top 10 movies by average ratings\n"
+      "Top 10 movies from all genres by average ratings:\n"
      ]
     },
     {
@@ -750,20 +736,20 @@
        "33491  [society, documentary, world, culture, human, ...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# top 10 movies by average ratings \n",
-    "print(\"top 10 movies by average ratings\")\n",
+    "print(\"Top 10 movies from all genres by average ratings:\")\n",
     "df_by_va.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "9b685bef-d200-4c1f-bf87-1824633d388f",
    "metadata": {
     "tags": []
@@ -773,7 +759,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "top 10 movies by the number of ratings\n"
+      "Top 10 movies from all genres by number of ratings (popularity)\n"
      ]
     },
     {
@@ -995,20 +981,20 @@
        "18318  [hallucination, dystopia, female protagonist, ...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# top 10 movies by number of ratings \n",
-    "print(\"top 10 movies by the number of ratings\")\n",
+    "print(\"Top 10 movies from all genres by number of ratings (popularity)\")\n",
     "df_by_nv.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "04f9eaea-aed2-4ae3-80bd-69aac8772853",
    "metadata": {
     "tags": []
@@ -1018,7 +1004,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "top 10 movies by Bayesian average of popularity and ratings \n"
+      "Top 10 movies from all genres by the Bayesian average of popularity and ratings \n"
      ]
     },
     {
@@ -1239,20 +1225,20 @@
        "2219   [italy, riddle, bookshop, self sacrifice, mass...     8.100611  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# top 10 movies by Bayesian average of popularity and ratings \n",
-    "print(\"top 10 movies by Bayesian average of popularity and ratings \")\n",
+    "print(\"Top 10 movies from all genres by the Bayesian average of popularity and ratings \")\n",
     "df_by_bavg.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "690da281-0d1b-41b9-b264-fa261ad45772",
    "metadata": {
     "tags": []
@@ -1488,13 +1474,13 @@
        "15597                                       [surrealism]     7.581215  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# build a method to recommend the top movies from each genre \n",
+    "# a method to recommend the top movies from each genre \n",
     "def movies_by_genre(genre, query_type):\n",
     "    match query_type:\n",
     "        case \"popularity\":\n",
@@ -1510,14 +1496,6 @@
     "# get top comedy movies \n",
     "movies_by_genre('Romance', 'bayesian').head(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84da3d6a-5188-4c76-bc09-e9b89f41f9c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
